fix: high contrast bugs

--- a/components/tooltip/index.css
+++ b/components/tooltip/index.css
@@ -53,6 +53,8 @@ governing permissions and limitations under the License.
 
 	/* pointer tip - default spacing to edge - corner radius plus half of tip width to neutralize override */
 	--spectrum-tooltip-pointer-corner-spacing: var(--mod-tooltip-border-radius, var(--spectrum-tooltip-border-radius));
+
+	--highcontrast-tooltip-border-width: 0px;
 }
 
 .spectrum-Tooltip {
@@ -111,7 +113,7 @@ governing permissions and limitations under the License.
 	block-size: var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size));
 	inline-size: var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size));
 
-	inset-block-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+	inset-block-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 	/* stylelint-disable-next-line csstools/use-logical -- intentional use of non-logical property */
 	left: calc(50% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))));
 	transform: rotate(-45deg);
@@ -130,7 +132,7 @@ governing permissions and limitations under the License.
 	.spectrum-Tooltip--top-right &,
 	.spectrum-Tooltip--top-start &,
 	.spectrum-Tooltip--top-end & {
-		inset-block-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+		inset-block-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		transform: rotate(-45deg);
 	}
 
@@ -140,7 +142,7 @@ governing permissions and limitations under the License.
 	.spectrum-Tooltip--bottom-right &,
 	.spectrum-Tooltip--bottom-start &,
 	.spectrum-Tooltip--bottom-end & {
-		inset-block: auto calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+		inset-block: auto calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		transform: rotate(135deg);
 	}
 
@@ -213,7 +215,7 @@ governing permissions and limitations under the License.
 	.spectrum-Tooltip--end &,
 	.spectrum-Tooltip--end-top &,
 	.spectrum-Tooltip--end-bottom & {
-		inset-inline: auto calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+		inset-inline: auto calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		transform: rotate(45deg);
 	}
 
@@ -224,7 +226,7 @@ governing permissions and limitations under the License.
 	.spectrum-Tooltip--start &,
 	.spectrum-Tooltip--start-top &,
 	.spectrum-Tooltip--start-bottom & {
-		inset-inline-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+		inset-inline-start: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		transform: rotate(-135deg);
 	}
 
@@ -254,7 +256,7 @@ governing permissions and limitations under the License.
 		&:dir(rtl) {
 			transform: rotate(-135deg);
 			right: auto;
-			left: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+			left: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		}
 	}
 
@@ -268,7 +270,7 @@ governing permissions and limitations under the License.
 		&:dir(rtl) {
 			transform: rotate(45deg);
 			left: auto;
-			right: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px);
+			right: calc(100% - (0.5 * var(--mod-tooltip-tip-square-size, var(--spectrum-tooltip-tip-square-size))) - 0.5px + var(--highcontrast-tooltip-border-width));
 		}
 	}
 }
@@ -573,11 +575,11 @@ governing permissions and limitations under the License.
 
 @media (forced-colors: active) {
 	.spectrum-Tooltip {
-		border: 1px solid transparent;
+		--highcontrast-tooltip-border-width: 1px;
+		border: var(--highcontrast-tooltip-border-width) solid CanvasText;
 	}
 
 	.spectrum-Tooltip-tip {
-		forced-color-adjust: none;
 		--highcontrast-tooltip-background-color-default: CanvasText;
 	}
 }
